[gd_scene load_steps=3 format=2]

[ext_resource path="res://Src/ThinArea/ThinArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.834, 3.12937 )

[node name="ThinArea" type="Area2D"]
collision_layer = 2147483652
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 20.0226, -4.00452 )
shape = SubResource( 1 )

[node name="DestinationUp" type="Position2D" parent="."]
position = Vector2( 20.3758, -9.98241 )

[node name="DestinationDown" type="Position2D" parent="."]
position = Vector2( 19.1317, 41.1296 )
